# fbapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  shell.nix
.github/workflows/: docker.yml  test.yml  web_deploy.yml
__tests__/: main_test.js  test_file.txt
src/: main.js  main.rs
web/: index.html
