[package]
name = "fbapi"
version = "0.1.0"
authors = [
    "Johannes (Jotrorox) Müller"
]
edition = "2021"
description = "A simple API to `FizzBuzz` numbers"
license = "AGPL-3.0"
repository = "https://github.com/Jotrorox/fbapi"
homepage = "https://fbapi-gh6l.onrender.com/"
readme = "README.md"
keywords = [
    "fizzbuzz", 
    "api", 
    "rust",
    "challenge", 
    "sloth-bytes", 
]
categories = [
    "web-programming",
    "game-development",
    "algorithms",
    "web-programming::http-server"
]

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
